# Ros_Note

./: .gitignore  README.md
src/launch_week1/: CMakeLists.txt  package.xml
src/launch_week1/launch/: mars.launch.py
src/moving_robo/: CMakeLists.txt  package.xml
src/moving_robo/config/: config.rviz
src/moving_robo/launch/: bridge.launch.py  final.launch.py
src/moving_robo/model/: robot.gazebo.xacro  robot.urdf.xacro
src/moving_robo/src/: safe_stopper.cpp
src/moving_robo/world/: world.world
src/robo/: CMakeLists.txt  package.xml
src/robo/model/: lidar.xacro  properties.urdf.xacro  robo_model.urdf.xacro
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/config/: ros_gz_bridge.yaml
src/robot_description/launch/: robot.launch.py
src/robot_description/rviz/: rviz.rviz
src/robot_description/src/: collect_data.py  detect_1.py
src/robot_description/worlds/: empty.sdf
src/simple_box_robo/: CMakeLists.txt  package.xml
src/simple_box_robo/config/: config.rviz  controllers.yaml
src/simple_box_robo/launch/: display.launch.py  final.launch.py  robo_model.launch.py  robo_sim.launch.py  sim.launch.py  simulation.launch.py  teleop.launch.py
src/simple_box_robo/model/: robot.gazebo.xacro  robot.urdf.xacro  ros2_control.urdf.xacro
src/simple_box_robo/rviz/: config.rviz
src/simple_box_robo/src/: obstacle_avoidance_node.py
src/simple_box_robo/worlds/: obstacle_world.world
src/week1/: CMakeLists.txt  package.xml
src/week1/src/: number_publisher.cpp  squared_publisher.cpp
task_log/: README_task1.md  README_task2.md
(+2 files in other folders)
